--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 body {
     min-height: 100vh;
     overflow-x: hidden;
+    font-family: "SF Pro Display", "sans-serif";
 }
 
 @keyframes slideInFromBottoms {
@@ -27,7 +28,7 @@ body {
 
 
 .img-animation {
-    animation: slideInFromBottoms 1.6s ease forwards;
+    animation: slideInFromBottoms 1.1s ease forwards;
     opacity: 0;
 }
 
@@ -101,19 +102,20 @@ body {
 }
 
 .cart-circle {
-    width: 20px;
-    height: 20px;
+    width: 19px;
+    height: 19px;
     border-radius: 50%;
     background: rgb(0, 0, 0);
     position: absolute;
-    left: 85.1%;
+    left: 84.9%;
     top: 3.3%;
     border: 3px solid #FFFF;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
+    font-size: 10px;
+    font-weight: 100;
 }
 
 /* - HEADER FINISH - */
@@ -146,7 +148,7 @@ body {
     flex-direction: column;
 }
 
-.footer .footer-info .footer-logo-text img{
+.footer .footer-info .footer-logo-text img {
     width: 65.4px;
     height: 22.87px;
 }
@@ -179,14 +181,14 @@ body {
     cursor: pointer;
 }
 
-.footer .footer-info .footer-navigation .navigation-section h3{
+.footer .footer-info .footer-navigation .navigation-section h3 {
     font-weight: 600;
     font-size: 16px;
     line-height: 16px;
     color: #FFFFFF;
 }
 
-.footer .footer-social-icons{
+.footer .footer-social-icons {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -194,7 +196,7 @@ body {
     height: 16px;
 }
 
-.footer .footer-social-icons *{
+.footer .footer-social-icons * {
     cursor: pointer;
 }
 
@@ -213,6 +215,11 @@ body {
     justify-content: center;
     color: #FFFFFF;
     background: #000000;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
 }
 
 .product-card {
@@ -234,9 +241,16 @@ body {
     justify-content: right;
 }
 
+.product-card .between-icon-favorites img{
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+}
+
 .product-card img {
     width: 160px;
     height: 160px;
+    cursor: pointer;
 }
 
 .product-card .product-text-button {
@@ -370,7 +384,7 @@ body {
 }
 
 .shop-now-button:hover {
-    transform: scale(1.04);
+    transform: scale(0.98);
 }
 
 .smaller-banners {
@@ -592,6 +606,11 @@ body {
     height: 128px;
     cursor: pointer;
     gap: 8px;
+    transition: all 75ms linear;
+}
+
+.home-category-card:hover {
+    transform: scale(1.14);
 }
 
 .home-category-card p {
@@ -602,6 +621,41 @@ body {
 }
 
 /* - HOME PAGE CATEGORİES FINISH - */
+
+/* - HOME PAGE PRODUCTS START - */
+
+.home-products-container {
+    width: 100%;
+    height: 1056px;
+    background: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.home-products-container .home-products-tag {
+    width: 1120px;
+    height: 32px;
+    margin-bottom: 32px;
+}
+
+.home-products-container .home-products-tag ul {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
+.products-container{
+    width: 1120px;
+    height: 880px;
+    gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+/* - HOME PAGE PRODUCTS FINISH - */
 
 
 
