--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,18 @@ body {
     font-family: "SF Pro Display", "sans-serif";
 }
 
+h1 {
+    cursor: default;
+}
+
+h2 {
+    cursor: default;
+}
+
+h3 {
+    cursor: default;
+}
+
 @keyframes slideInFromBottoms {
     0% {
         transform: translateX(100%);
@@ -586,6 +598,55 @@ body {
     color: #909090;
 }
 
+.bottom-big-banner-container {
+    width: 100%;
+    height: 448px;
+    background: linear-gradient(to right, #2E2E2E, #000000);
+}
+
+.bottom-big-banner-container .big-banner-text-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.bottom-big-banner-container .big-banner-text-container .big-banner-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 530px;
+    height: 112px;
+    margin-bottom: 40px;
+}
+
+.bottom-big-banner-container .big-banner-text-container .big-banner-title h1 {
+    font-weight: 100;
+    font-size: 72px;
+    line-height: 72px;
+    letter-spacing: -1%;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.bottom-big-banner-container .big-banner-text-container .big-banner-title h1 span {
+    font-weight: 800;
+    font-size: 72px;
+    line-height: 72px;
+    letter-spacing: -1%;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.bottom-big-banner-container .big-banner-text-container .big-banner-title p {
+    color: #787878;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    text-align: center;
+}
+
 /* - BANNER FINISH - */
 
 /* - HOME PAGE CATEGORİES START - */
@@ -696,6 +757,38 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
+}
+
+.discounted-container {
+    width: 100%;
+    height: 656px;
+    background: #FFFFFF;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 32px;
+}
+
+.discounted-container .discounted-text h2 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: #000000;
+}
+
+.discounted-container .discounted-text {
+    display: flex;
+    justify-content: left;
+    width: 1120px;
+}
+
+.discounted-container .discounted-products-container {
+    display: flex;
+    width: 1120px;
+    height: 432px;
     justify-content: space-between;
 }
 
