--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,47 @@ h3 {
 }
 
 /* - ALL PAGE COMPONENTS START - */
+
+.bread-crumbs-container {
+    width: 100%;
+    height: 104px;
+    padding: 40px 160px;
+    background: #FFFFFF;
+    gap: 16px;
+    display: flex;
+    align-items: center;
+}
+
+
+.breadcrumb-item {
+    text-decoration: none;
+    margin: 0 8px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    color: #A4A4A4;
+    transition: all 40ms linear;
+}
+
+.breadcrumb-separator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #A4A4A4;
+    gap: 16px;
+}
+
+.breadcrumb-item-active{
+    color: #000000;
+}
+
+.breadcrumb-item:hover,
+.breadcrumb-item:active {
+    color: #000000;
+}
+
+
+
 /* - HEADER START - */
 .header-container {
     width: 100%;
