--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ h3 {
     gap: 16px;
 }
 
-.breadcrumb-item-active{
+.breadcrumb-item-active {
     color: #000000;
 }
 
@@ -836,10 +836,45 @@ h3 {
 
 /* - HOME PAGE PRODUCTS FINISH - */
 
-
-
-
-
-
-
 /* - HOMEPAGE FINISH - */
+
+
+
+/* - PRODUCT DETAILS START - */
+
+.main-info {
+    width: 100%;
+    height: 896px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.main-info .product-image-container {
+    display: flex;
+    align-items: center;
+}
+
+.main-info .product-image-container .product-image {
+    width: 480px;
+    height: 516px;
+}
+
+.main-info .product-image-container .image-4 img:hover {
+    border: 1px solid rgb(196, 196, 196);
+    border-radius: 8px;
+}
+
+.main-info .product-image-container .image-4 {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-info .product-image-container .image-4 img {
+    width: 100px;
+    height: 93px;
+    margin: 4px;
+    opacity: 60%;
+}
+
+/* - PRODUCT DETAILS FINISH - */
