--- a/src/App.css
+++ b/src/App.css
@@ -1084,7 +1084,7 @@ h3 {
     height: 56px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 16px;
     border-radius: 8px;
 }
 
@@ -1105,6 +1105,91 @@ h3 {
     font-size: 14px;
     line-height: 24px;
     color: #0C0C0C;
+}
+
+
+.product-details-detail-container {
+    width: 100%;
+    height: 1144px;
+    padding: 80px 160px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FAFAFA;
+}
+
+
+.product-details-detail-container .product-details-detail {
+    width: 1120px;
+    height: 984px;
+    border-radius: 8px;
+    background: #FFFFFF;
+    padding: 48px 40px;
+}
+
+.product-details-detail-container .product-details-detail .header-text {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.product-details-detail-container .product-details-detail p {
+    font-size: 14px;
+    font-weight: medium;
+    line-height: 24px;
+    color: #9D9D9D;
+    margin: 32px 0;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content {
+    width: 1040px;
+    height: 616px;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content .p-d-info-1 {
+    width: 1040px;
+    height: 448px;
+    margin-bottom: 40px;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content .p-d-info-1 h2 {
+    font-size: 20px;
+    font-weight: medium;
+    line-height: 24px;
+    margin-bottom: 16px;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content .p-d-info-2 {
+    width: 1040px;
+    height: 448px;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content .p-d-info-2 h2 {
+    font-size: 20px;
+    font-weight: medium;
+    line-height: 24px;
+    margin-bottom: 16px;
+}
+
+.line {
+    width: 1040px;
+    height: 32px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+
+.product-details-detail-container .product-details-detail .product-detail-content .p-d-info-1 .p-d-info-1-content .line-add {
+    width: 1040px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.line-2-1 {
+    width: 1040px;
+    height: 32px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* - PRODUCT DETAILS FINISH - */
