--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,21 @@ body {
     font-family: "SF Pro Display", "sans-serif";
 }
 
+::-webkit-scrollbar {
+    width: 8px; /* Scroll çubuğu genişliği */
+  }
+  
+  /* Scroll çubuğu izi */
+  ::-webkit-scrollbar-thumb {
+    background-color: #888; /* Scroll çubuğu rengi */
+    border-radius: 2px; /* Scroll çubuğu kenar yarıçapı */
+  }
+  
+  /* Scroll çubuğu izi etkin olduğunda */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Scroll çubuğu rengi (hover durumunda) */
+  }
+
 h1 {
     cursor: default;
 }
@@ -691,6 +706,8 @@ h3 {
 
 /* - HOME PAGE CATEGORİES START - */
 
+
+
 .home-categories-container {
     width: 100%;
     height: 352px;
@@ -1335,12 +1352,14 @@ h3 {
 
 .reviews-container .reviews-comment-container {
     width: 1120px;
-    height: 744px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    min-height: 744px;
+    gap: 24px;
 }
+
 
 .reviews-container .reviews-comment-container .reviews-comment {
     width: 1120px;
