--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,17 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 8px; /* Scroll çubuğu genişliği */
-  }
-  
-  /* Scroll çubuğu izi */
-  ::-webkit-scrollbar-thumb {
-    background-color: #888; /* Scroll çubuğu rengi */
-    border-radius: 2px; /* Scroll çubuğu kenar yarıçapı */
-  }
-  
-  /* Scroll çubuğu izi etkin olduğunda */
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Scroll çubuğu rengi (hover durumunda) */
-  }
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
 
 h1 {
     cursor: default;
@@ -41,30 +39,12 @@ h3 {
     cursor: default;
 }
 
-@keyframes slideInFromBottoms {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-
-.img-animation {
-    animation: slideInFromBottoms 1.1s ease forwards;
-    opacity: 0;
-}
-
 /* - ALL PAGE COMPONENTS START - */
 
 .bread-crumbs-container {
     width: 100%;
     height: 104px;
-    padding: 40px 160px;
+    padding: 40px 196px;
     background: #FFFFFF;
     gap: 16px;
     display: flex;
@@ -169,14 +149,20 @@ h3 {
     cursor: pointer;
 }
 
+.cart-container {
+    position: relative;
+    display: inline-block;
+}
+
 .cart-circle {
     width: 19px;
     height: 19px;
     border-radius: 50%;
     background: rgb(0, 0, 0);
     position: absolute;
-    left: 84.9%;
-    top: 3.3%;
+    left: 90%;
+    top: 0%;
+    transform: translate(-60%, -20%);
     border: 3px solid #FFFF;
     color: white;
     display: flex;
@@ -198,6 +184,8 @@ h3 {
     flex-direction: column;
     background: #000000;
     padding: 104px 160px;
+    display: flex;
+    align-items: center;
 }
 
 .footer .footer-info {
@@ -291,14 +279,14 @@ h3 {
 }
 
 .product-card {
-    width: 268px;
-    height: 432px;
+    padding: 24px 16px;
     border-radius: 9px;
     background: #F6F6F6;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 15px;
 }
 
 .product-card .between-icon-favorites {
@@ -308,7 +296,6 @@ h3 {
     align-items: center;
     justify-content: right;
     margin-bottom: 8px;
-    margin-top: -30px;
 }
 
 .product-card .between-icon-favorites img {
@@ -375,11 +362,11 @@ h3 {
 /* - BANNER START - */
 .main-banner {
     width: 100%;
-    height: 632px;
     padding: 0 160px;
     background: linear-gradient(#211C24, #211C24);
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .main-banner .main-banner-content {
@@ -458,18 +445,15 @@ h3 {
 
 .smaller-banners {
     width: 100%;
-    height: 600px;
     display: flex;
 }
 
 .smaller-banners .left-banners {
     width: 50%;
-    height: 600px;
 }
 
 .smaller-banners .left-banners .wide-square {
     width: 100%;
-    height: 328px;
     background: #FFFFFF;
     display: flex;
     align-items: center;
@@ -500,13 +484,11 @@ h3 {
 
 .smaller-banners .left-banners .squares-banner {
     width: 100%;
-    height: 272px;
     display: flex;
 }
 
 .smaller-banners .left-banners .squares-banner .square-banner {
     width: 100%;
-    height: 272px;
     display: flex;
     align-items: center;
     gap: 32px;
@@ -560,7 +542,6 @@ h3 {
 
 .smaller-banners .big-banner {
     width: 50%;
-    height: 600px;
     background: #EDEDED;
     display: flex;
     align-items: center;
@@ -608,22 +589,21 @@ h3 {
 }
 
 .smaller-banners .big-banner img {
-    margin-right: -95px;
+    margin-right: -15%;
 }
 
 .middle-banner-container {
     width: 100%;
-    height: 640px;
     display: flex;
 }
 
 .middle-banner-container .middle-banner-card {
-    width: 25%;
-    height: 100%;
+    width: calc(100% / 4);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 32px;
 }
 
 .middle-banner-container .middle-banner-card .middle-banner-card-text {
@@ -1415,7 +1395,7 @@ h3 {
     opacity: 20%;
 }
 
-.related-container{
+.related-container {
     width: 100%;
     height: 656px;
     display: flex;
@@ -1426,19 +1406,19 @@ h3 {
     gap: 32px;
 }
 
-.related-container .related-text{
+.related-container .related-text {
     width: 1120px;
     align-items: center;
     justify-content: left;
 }
 
-.related-container .related-text h1{
+.related-container .related-text h1 {
     font-weight: 500;
     font-size: 24px;
     line-height: 32px;
 }
 
-.related-container .related-products-container{
+.related-container .related-products-container {
     width: 1120px;
     height: 432px;
     display: flex;
@@ -1450,51 +1430,48 @@ h3 {
 
 /* - PRODUCT LİST START - */
 
-.product-list-inclusionary{
+.product-list-inclusionary {
     width: 100%;
-    height: 1560px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
-.product-list-container{
+.product-list-container {
     width: 1119px;
-    height: 1480px;
     display: flex;
     justify-content: center;
 }
 
-.product-list-filters-container{
+.product-list-filters-container {
     margin-right: 32px;
 }
 
-.product-list-products-container{
+.product-list-products-container {
     width: 831px;
-    height: 1480px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
 }
 
-.product-list-list{
+.product-list-list {
     width: 831px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 1408px;
 }
 
-.left-side-products h3{
+.left-side-products h3 {
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
     letter-spacing: 3%;
     color: #6C6C6C;
 }
-.left-side-products h3 span{
+
+.left-side-products h3 span {
     font-weight: 500;
     font-size: 20px;
     line-height: 16px;
@@ -1502,7 +1479,16 @@ h3 {
     color: black;
 }
 
-.product-list-top-part{
+.product-list-top-part {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.left-side-products {
     width: 100%;
     height: 40px;
     display: flex;
@@ -1528,6 +1514,66 @@ h3 {
 
 .accordion {
     margin: 18px;
+}
+
+.filter-search {
+    width: 256px;
+    height: 40px;
+    border-radius: 8px;
+    background: #F5F5F5;
+    padding: 8px 16px;
+    display: flex;
+    align-items: center;
+}
+
+.filter-search input {
+    width: 200px;
+    height: 35px;
+    border-radius: 8px;
+    background: #F5F5F5;
+    outline: none;
+    border: 0;
+    margin-left: 6px;
+}
+
+.filter-brand{
+    width: 256px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+
+}
+
+.filter-brand input {
+    appearance: none;
+    -webkit-appearance: none;
+    height: 15.67px;
+    width: 16.33px;
+    background: white;
+    border-radius: 3px;
+    cursor: pointer;
+    border: 0.5px solid #D3D3D3;
+}
+
+.filter-brand input:checked {
+    background: black;
+    border: 0;
+    cursor: pointer;
+}
+
+.accordion-content{
+    width: 256px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.accordion-brands-container{
+    width: 256px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /* - PRODUCT LİST FINISH - */
