--- a/src/App.css
+++ b/src/App.css
@@ -1536,7 +1536,7 @@ h3 {
     margin-left: 6px;
 }
 
-.filter-brand{
+.filter-brand {
     width: 256px;
     height: 24px;
     display: flex;
@@ -1561,14 +1561,14 @@ h3 {
     cursor: pointer;
 }
 
-.accordion-content{
+.accordion-content {
     width: 256px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.accordion-brands-container{
+.accordion-brands-container {
     width: 256px;
     height: 160px;
     display: flex;
@@ -1581,7 +1581,7 @@ h3 {
 
 /* - SHOPPİNG CART PAGE START - */
 
-.shopping-cart-container{
+.shopping-cart-container {
     width: 100%;
     display: flex;
     align-items: center;
@@ -1590,26 +1590,193 @@ h3 {
     padding: 112px 160px;
 }
 
-.shopping-cart-content{
+.shopping-cart-content {
     width: 1120px;
     display: flex;
     justify-content: space-between;
 }
 
-.shopping-cart-left{
+.shopping-cart-left {
     width: 536px;
     display: flex;
     flex-direction: column;
 }
 
-.shopping-cart-summary{
+.shopping-cart-summary {
     width: 536px;
-    height: 656px;
+    height: 500px;
     border-radius: 10px;
+    padding: 56px;
     border: 1px solid #EBEBEB;
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.cart-item {
+    width: 100%;
+    height: 122px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.cart-item-info {
+    display: flex;
+    flex-direction: column;
+    width: 193px;
+    justify-content: space-between;
+}
+
+.cart-item-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 431px;
+    height: 80px;
+}
+
+.devider {
+    width: 536px;
+    height: 0.5px;
+    background: #A3A3A3;
+    margin-top: 40px;
+}
+
+.cart-item-right-side {
+    width: 238px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cart-counter {
+    width: 104px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.quantity-control {
+    width: 40px;
+    height: 32px;
+    border: 0.5px solid #D9D9D9;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-item-right-side span {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 32px;
+    letter-spacing: 3%;
+}
+
+.summary-content {
+    width: 408px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.summary-block {
+    width: 100%;
+    height: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.summary-fields {
+    width: 100%;
+    height: 192px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.summary-field {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.summary-field span {
+    font-weight: 500;
+    font-size: 14px;
+    color: #545454;
+}
+
+.summary-field input {
+    width: 100%;
+    height: 56px;
+    border-radius: 7px;
+    border: 0.5px solid #9f9f9f;
+    padding: 16px 0px 16px 16px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.5%;
+}
+
+.summary-field button {
+    width: 76.45px;
+    height: 32px;
+    border-radius: 6px;
+    border: 1px solid #000;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 26px;
+    color: #000;
+    background: #FFFFFF;
+    position: absolute;
+    right: 85px;
+    top: 261.1px;
+}
+
+.summary-prices {
+    width: 100%;
+    height: 50px;
+}
+
+.total-price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.total-price * {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 3%;
+    color: #000;
+}
+
+.checkout-btn{
+    width: 408px;
+    height: 56px;
+    border-radius: 6px;
+    background: #000;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    border: 0;
 }
 
 /* - SHOPPİNG CART PAGE FINISH - */
